--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
 # statusbar coloring
-
 set -g status-bg black
 set -g status-fg white
+
+# fix troubles with vim modeswitching
+set -sg escape-time 10
