--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 # statusbar coloring
-set -g status-bg black
-set -g status-fg white
+set -g status-bg default
+set -g status-fg 
 
 # fix troubles with vim modeswitching
 set -sg escape-time 10
