fix tmux foreground, update screenshots

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 # statusbar coloring
 set -g status-bg default
-set -g status-fg 
+set -g status-fg white
 
 # fix troubles with vim modeswitching
 set -sg escape-time 10
