polybar: fix off-center bspwm display

--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -17,7 +17,7 @@ height = 18
 ;offset-x = 1%
 offset-y = 16
 radius = 0.0
-fixed-center = false
+fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
