--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -11,13 +11,14 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/main]
-;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 18
-;offset-x = 1%
-offset-y = 16
+height = 32
+offset-x = 4
+offset-y = 0
 radius = 0.0
 fixed-center = true
+
+override-redirect = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -34,9 +35,9 @@ padding-right = 3
 module-margin-left = 3
 module-margin-right = 3
 
-font-0 = boxxy:pixelsize=10;1
-font-1 = boxxy:pixelsize=10;1
-font-2 = Wuncon Siji:pixelsize=10;1
+font-0 = scientifica:pixelsize=10;1
+font-1 = scientifica:pixelsize=10;1
+font-2 = Siji:pixelsize=10;1
 
 modules-left = date
 modules-center = bspwm
@@ -56,8 +57,7 @@ label = %title:0:30:...%
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
+format = <label-indicator>
 
 label-indicator-padding = 2
 label-indicator-margin = 1
